samples/_failures_safe/1761216524_2deb8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e86f5830.c: In function ‘main’:
./samples/SAFE/__tmp_e86f5830.c:141:9: error: expected expression at end of input
  141 |         if (found ==
      |         ^~
./samples/SAFE/__tmp_e86f5830.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e86f5830.c:141:9: error: expected declaration or statement at end of input
